--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -261,6 +261,7 @@
     <Compile Include="DataEditors\ByteSize\ByteSizeConfigurationEditor.cs" />
     <Compile Include="DataEditors\CascadingDropdownList\CascadingDropdownListDataEditor.cs" />
     <Compile Include="DataEditors\CascadingDropdownList\CascadingDropdownListConfigurationEditor.cs" />
+    <Compile Include="DataEditors\CheckboxList\CheckAllConfigurationField.cs" />
     <Compile Include="DataEditors\CheckboxList\CheckboxListDataEditor.cs" />
     <Compile Include="DataEditors\CheckboxList\CheckboxListConfigurationEditor.cs" />
     <Compile Include="DataEditors\Checkbox\CheckboxConfigurationEditor.cs" />
@@ -274,7 +275,9 @@
     <Compile Include="DataEditors\ConfigurationEditor\IConfigurationEditorItem.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\Serialization\ConfigurationFieldContractResolver.cs" />
     <Compile Include="DataEditors\DropdownList\AllowEmptyConfigurationField.cs" />
+    <Compile Include="DataEditors\HideLabel\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\ItemPicker\AllowDuplicatesConfigurationField.cs" />
+    <Compile Include="DataEditors\ItemPicker\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\Notes\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\Notes\NotesConfigurationField.cs" />
     <Compile Include="DataEditors\_\ConfigurationFieldExtensions.cs" />
@@ -309,7 +312,7 @@
     <Compile Include="DataEditors\MacroPicker\MacroPickerValueConverter.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerConfigurationEditor.cs" />
-    <Compile Include="DataEditors\_\HideLabelDataValueEditor.cs" />
+    <Compile Include="DataEditors\HideLabel\HideLabelDataValueEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesDataEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesConfigurationEditor.cs" />
     <Compile Include="DataEditors\DataTable\DataTableDataEditor.cs" />
@@ -317,9 +320,9 @@
     <Compile Include="DataEditors\RenderMacro\RenderMacroValueConverter.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroConfigurationEditor.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroDataEditor.cs" />
-    <Compile Include="DataEditors\_\HideLabelConfigurationField.cs" />
-    <Compile Include="DataEditors\_\DisableSortingConfigurationField.cs" />
-    <Compile Include="DataEditors\_\MaxItemsConfigurationField.cs" />
+    <Compile Include="DataEditors\HideLabel\HideLabelConfigurationField.cs" />
+    <Compile Include="DataEditors\ItemPicker\DisableSortingConfigurationField.cs" />
+    <Compile Include="DataEditors\ItemPicker\MaxItemsConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerTypeConfigurationField.cs" />
     <Compile Include="DataEditors\_\OrientationConfigurationField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
