--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -349,9 +349,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DataEditors\ItemPicker\item-picker.overlay.js" />
+    <Content Include="DataEditors\RadioButtonList\radio-button-list.css" />
     <Content Include="DataEditors\_\_json-editor.html" />
     <Content Include="DataEditors\_\_dev-mode.html" />
     <Content Include="DataEditors\_\_dev-mode.js" />
+    <Content Include="Web\UI\App_Plugins\Contentment\contentment.css" />
     <Content Include="Web\UI\App_Plugins\Contentment\contentment.js" />
     <Content Include="DataEditors\ByteSize\byte-size.js" />
     <Content Include="DataEditors\IconPicker\icon-picker.html" />
