--- a/src/Our.Umbraco.Contentment/packages.config
+++ b/src/Our.Umbraco.Contentment/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="8.0.0" targetFramework="net472" />
   <package id="ClientDependency" version="1.9.7" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
@@ -44,13 +43,15 @@
   <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net472" />
   <package id="Serilog.Formatting.Compact.Reader" version="1.0.3" targetFramework="net472" />
   <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net472" />
+  <package id="Serilog.Sinks.Async" version="1.3.0" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Map" version="1.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
   <package id="Superpower" version="2.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.0.1" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.1.0-alpha.3876" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.1.0-alpha.3876" targetFramework="net472" />
 </packages>
