--- a/src/Our.Umbraco.Contentment/packages.config
+++ b/src/Our.Umbraco.Contentment/packages.config
@@ -52,6 +52,6 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.1.0-alpha.3876" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.1.0-alpha.3876" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.1.0" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.1.0" targetFramework="net472" />
 </packages>
