--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -326,6 +326,7 @@
     <Compile Include="DataEditors\Notes\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\ToggleGroup\ToggleGroupConfigurationEditor.cs" />
     <Compile Include="DataEditors\ToggleGroup\ToggleGroupDataEditor.cs" />
+    <Compile Include="DataEditors\_\IContentmentListItem.cs" />
     <Compile Include="DataEditors\_\ReadOnlyDataValueEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesConfigurationField.cs" />
     <Compile Include="DataEditors\RadioButtonList\RadioButtonListValueConverter.cs" />
