--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -326,6 +326,8 @@
     <Compile Include="DataEditors\Notes\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\ToggleGroup\ToggleGroupConfigurationEditor.cs" />
     <Compile Include="DataEditors\ToggleGroup\ToggleGroupDataEditor.cs" />
+    <Compile Include="DataEditors\Transclude\TranscludeValueConverter.cs" />
+    <Compile Include="DataEditors\Transclude\TranscludeDataEditor.cs" />
     <Compile Include="DataEditors\_\IContentmentListItem.cs" />
     <Compile Include="DataEditors\_\ReadOnlyDataValueEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesConfigurationField.cs" />
@@ -397,6 +399,7 @@
     <Content Include="DataEditors\RadioButtonList\radio-button-list.css" />
     <Content Include="DataEditors\ToggleGroup\toggle-group.js" />
     <Content Include="DataEditors\ToggleGroup\toggle-group.html" />
+    <Content Include="DataEditors\Transclude\transclude.html" />
     <Content Include="DataEditors\_\_json-editor.html" />
     <Content Include="DataEditors\_\_dev-mode.html" />
     <Content Include="DataEditors\_\_dev-mode.js" />
